Update README.md and add borrow confirmation to AdminPanel